--- a/css/hotel.css
+++ b/css/hotel.css
@@ -340,6 +340,10 @@ footer .ftr-content p {
     align-items: center;
 }
 
+#contact {
+    overflow-x: hidden;
+}
+
 #contact  .contact-content-1 {
     display: flex;
     flex-direction: column;
